syntax = "proto3";

message UpdateName {
  string new_name = 1;
}
